--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="css/estilo.css">
     
 
-    <title>Média Escolar</title>
+    <title>Calcule a Média Escolar</title>
 </head>
 <body>
 
     <div class="display">
-        <h1>Calculo Média Estudante</h1>
+        <h1>Cálculo Média Estudante</h1>
         <div class="input-text">
             <input type="text" name="notes" id="n1" placeholder="Insira Nota 1">
         </div>
